<?xml version="1.0"?>
<package format="2">
  <name>costmap_cspace</name>
  <version>0.1.0</version>
  <description>3-dof configuration space costmap package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>tf</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>costmap_cspace_msgs</depend>

  <depend>xmlrpcpp</depend>
</package>
