<?xml version="1.0"?>
<package format="2">
  <name>joystick_interrupt</name>
  <version>0.1.0</version>
  <description>Interrupt cmd_vel by joystick input</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>
</package>
