<?xml version="1.0"?>
<package>
  <name>neonavigation</name>
  <version>0.0.0</version>
  <description>The neonavigation package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>planner_cspace</run_depend>
  <run_depend>costmap_cspace</run_depend>
  <run_depend>neonavigation_launch</run_depend>
  <run_depend>safety_limiter</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
