<?xml version="2.0"?>
<package>
  <name>neonavigation</name>
  <version>0.0.0</version>
  <description>The neonavigation package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>costmap_cspace</exec_depend>
  <exec_depend>map_organizer</exec_depend>
  <exec_depend>neonavigation_launch</exec_depend>
  <exec_depend>obj_to_pointcloud</exec_depend>
  <exec_depend>panner_cspace</exec_depend>
  <exec_depend>safety_limiter</exec_depend>
  <exec_depend>track_odometry</exec_depend>
  <exec_depend>trajectory_tracker</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
