<?xml version="1.0"?>
<package format="2">
  <name>neonavigation</name>
  <version>0.11.2</version>
  <description>The neonavigation meta-package including 3-dof configuration space planner</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend version_gte="0.7.22">catkin</buildtool_depend>
  
  <exec_depend>costmap_cspace</exec_depend>
  <exec_depend>joystick_interrupt</exec_depend>
  <exec_depend>map_organizer</exec_depend>
  <exec_depend>neonavigation_common</exec_depend>
  <exec_depend>neonavigation_launch</exec_depend>
  <exec_depend>obj_to_pointcloud</exec_depend>
  <exec_depend>planner_cspace</exec_depend>
  <exec_depend>safety_limiter</exec_depend>
  <exec_depend>track_odometry</exec_depend>
  <exec_depend>trajectory_tracker</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
