<?xml version="2.0"?>
<package>
  <name>neonavigation_launch</name>
  <version>0.0.0</version>
  <description>The neonavigation_launch package</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>costmap_cspace</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>planner_cspace</exec_depend>
  <exec_depend>safety_limiter</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>trajectory_tracker</exec_depend>
</package>
